Trying to fix the issue with burger on iOS

--- a/app-next/app/components/header/page.module.css
+++ b/app-next/app/components/header/page.module.css
@@ -89,8 +89,12 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
   width: 25px;
   height: 20px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   background: none;
   border: none;
   cursor: pointer;
@@ -111,10 +115,14 @@
 }
 
 .header__line {
+  display: block;
+  width: 25px;
   height: 3px;
   background: #fff;
   border-radius: 2px;
   transition: all 0.3s ease;
+  transform-origin: center;
+  opacity: 1;
 }
 
 @media (min-width: 1085px) {
